--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/Toomoya/cam-inetern#readme",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "parcel-bundler": "^1.6.2"
   }
 }
